postgres error parsing - openapi req and resp validation - lint setup
