# internal/generated/api/gen.go
@@ -34,6 +34,12 @@ type CreateTodoRequest struct {
 	Title string `json:"title"`
 }
 
+// HTTPValidationError defines model for HTTPValidationError.
+type HTTPValidationError struct {
+	Detail   *[]ValidationError `json:"detail,omitempty"`
+	Messages []string           `json:"messages"`
+}
+
 // OnboardWorkspaceRequest defines model for OnboardWorkspaceRequest.
 type OnboardWorkspaceRequest struct {
 	// Description A brief description of the workspace purpose.
@@ -70,6 +76,22 @@ type User struct {
 	Name  string            `json:"name"`
 }
 
+// ValidationError defines model for ValidationError.
+type ValidationError struct {
+	Ctx *map[string]interface{} `json:"ctx,omitempty"`
+
+	// Detail Details of the error
+	Detail ValidationErrorDetail `json:"detail"`
+	Loc    []string              `json:"loc"`
+	Msg    string                `json:"msg"`
+}
+
+// ValidationErrorDetail Details of the error
+type ValidationErrorDetail struct {
+	// Value The actual value that failed validation
+	Value string `json:"value"`
+}
+
 // Workspace defines model for Workspace.
 type Workspace struct {
 	Description string                      `json:"description"`
@@ -82,7 +104,12 @@ type IdempotencyKey = openapi_types.UUID
 
 // ErrorResponse defines model for ErrorResponse.
 type ErrorResponse struct {
-	Error *string `json:"error,omitempty"`
+	Error *struct {
+		Code       *string              `json:"code,omitempty"`
+		Message    *string              `json:"message,omitempty"`
+		TraceId    *string              `json:"trace_id,omitempty"`
+		Validation *HTTPValidationError `json:"validation,omitempty"`
+	} `json:"error,omitempty"`
 }
 
 // CreateTagParams defines parameters for CreateTag.
